added new func for kafka
